Remove unused solution file and update assembly information; add sourcelink.json for debugging support

--- a/TaskManagerUI/src/app/components/footer/footer.component.html
+++ b/TaskManagerUI/src/app/components/footer/footer.component.html
@@ -14,16 +14,16 @@
       <ul class="footer-links">
         <li><a routerLink="/dashboard" class="footer-link">Dashboard</a></li>
         <li><a routerLink="/tasks" class="footer-link">Tasks</a></li>
-        <li><a routerLink="/settings" class="footer-link">Settings</a></li>
+        <!-- <li><a routerLink="/settings" class="footer-link">Settings</a></li> -->
       </ul>
     </div>
 
     <div class="footer-section">
       <h4>Support</h4>
       <ul class="footer-links">
-        <li>
+        <!-- <li>
           <a href="https://help.taskmanager.com" class="footer-link">Help</a>
-        </li>
+        </li> -->
         <li>
           <a href="https://docs.taskmanager.com" class="footer-link">Docs</a>
         </li>
